--- a/views/newProduct.hbs
+++ b/views/newProduct.hbs
@@ -37,10 +37,22 @@
                 <input type="number" name="txtPrice" class="form-control" required="" placeholder="Price"
                     aria-label="Username" aria-describedby="basic-addon1">
                 <br>
+                 <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">Product Date</span>
+                </div>
+                <input type="date" name="txtDate" class="form-control" required=""
+                    aria-label="Username" aria-describedby="basic-addon1">
+               
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">Product Color</span>
                 </div>
                 <input type="text" name="txtColor" class="form-control" required="" placeholder="Color"
+                    aria-label="Username" aria-describedby="basic-addon1">
+                
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">Product Bill</span>
+                </div>
+                <input type="number" name="txtBill" class="form-control" required="" placeholder="Color"
                     aria-label="Username" aria-describedby="basic-addon1">
             </div>
             <input type="submit" value="Update" class="button">
